--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -22,17 +22,17 @@
     "import cvxpy as cp\n",
     "\n",
     "### problem data\n",
-    "xs = None  # ndarray, (m, n): dataset\n",
-    "m = xs.shape[0]\n",
-    "n = xs.shape[1]\n",
+    "xs = None  # ndarray: dataset features\n",
+    "ys = None  # ndarray: dataset observations\n",
+    "m = None  # int: number of samples in the dataset\n",
     "\n",
     "### hyperparameters\n",
     "eps = 1e-6  # float: termination criterion\n",
     "\n",
     "### P-problem\n",
+    "K = None  # int: number of latent factors\n",
     "thetas = []  # list of cp.Variable objects: model parameters\n",
     "r = []  # list of cp.Expression objects: loss functions\n",
-    "K = len(r)\n",
     "\n",
     "ztil = cp.Parameter((m, K), nonneg=True)\n",
     "Pobj = cp.sum(cp.diag(ztil @ cp.vstack(r)))\n",
