--- a/examples/hier_forget_q_learning.ipynb
+++ b/examples/hier_forget_q_learning.ipynb
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solve with regularization weight: 0.\n",
+      "Solve with labmda = 0.\n",
       "Iteration 1: P-problem value: 216.32915938802864, F-problem value: 196.75934190274984, gap: 19.569817485278804.\n",
       "Iteration 2: P-problem value: 113.38248933574127, F-problem value: 112.53058323464191, gap: 0.8519061010993596.\n",
       "Iteration 3: P-problem value: 109.69845285488103, F-problem value: 109.69842268732943, gap: 3.0167551599902254e-05.\n",
@@ -95,7 +95,7 @@
       "Iteration 6: P-problem value: 109.6974898545873, F-problem value: 109.69748821349093, gap: 1.6410963752377938e-06.\n",
       "Iteration 7: P-problem value: 109.6975019523854, F-problem value: 109.69750092834617, gap: 1.0240392214200256e-06.\n",
       "Iteration 8: P-problem value: 109.69808423984881, F-problem value: 109.69808331647846, gap: 9.233703508471081e-07.\n",
-      "Solve with regularization weight: 1.\n",
+      "Solve with labmda = 1.\n",
       "Iteration 1: P-problem value: 109.69753492272909, F-problem value: 187.19668872801407, gap: 77.49915380528498.\n",
       "Iteration 2: P-problem value: 140.5052972936393, F-problem value: 185.82826085498994, gap: 45.32296356135063.\n",
       "Iteration 3: P-problem value: 164.65191570235817, F-problem value: 177.48786958635495, gap: 12.83595388399678.\n",
@@ -163,7 +163,7 @@
     "\n",
     "### solve, terminate when the F- and P-objective converge\n",
     "def solve(p):\n",
-    "    print(f\"Solve with regularization weight: {p}.\")\n",
+    "    print(f\"Solve with labmda = {p}.\")\n",
     "    lbd.value = p\n",
     "    i = 0\n",
     "    while True:\n",
@@ -241,7 +241,30 @@
     "axs[0, 0].set_ylabel(r'$\\lambda = 0$')\n",
     "axs[1, 0].set_ylabel(r'$\\lambda = 1$')\n",
     "\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "fig.savefig('../figures/hier_forget_q_learning.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "673915a4-059e-4a7e-b431-a24a724e04f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factor identification accuracy (lambda = 0): 0.71.\n",
+      "Factor identification accuracy (lambda = 1): 0.93.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p, factor in zip([0, 1], [z_noreg, z_reg]):\n",
+    "    acc = np.sum(np.argmax(factor, axis=-1) == labels) / len(labels)\n",
+    "    print(f'Factor identification accuracy (lambda = {p}): {acc}.')"
    ]
   }
  ],
