--- a/examples/mix_lin_reg.ipynb
+++ b/examples/mix_lin_reg.ipynb
@@ -34,7 +34,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "9db4fdb0-e5a7-4ad7-93bf-3d7566a88d16",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-10T13:57:46.484082Z",
+     "start_time": "2025-03-10T13:57:46.375669Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# generate dataset\n",
@@ -162,7 +167,9 @@
     "axs.set_xticklabels(np.arange(1, 11, 2))\n",
     "axs.set_xlabel('indices')\n",
     "axs.set_ylabel(r'$\\theta$')\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "fig.savefig('../figures/mix_lin_reg.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -175,14 +182,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Samples classification accuracy: 0.954.\n"
+      "Factor identification accuracy: 0.954.\n"
      ]
     }
    ],
    "source": [
     "z_hat = np.vstack([z.value[:, 1], z.value[:, 2], z.value[:, 0]]).T\n",
     "acc = np.sum(np.argmax(z_hat, axis=-1) == labels) / len(labels)\n",
-    "print(f'Samples classification accuracy: {acc}.')"
+    "print(f'Factor identification accuracy: {acc}.')"
    ]
   }
  ],
