--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "id": "9f6850e8-0ced-4735-9b6c-7ceda2919111",
    "metadata": {},
-   "source": "# Multi-convex Programming for Discrete Latent Factor Models Prototyping"
+   "source": [
+    "# Multi-convex Programming for Discrete Latent Factor Models Prototyping"
+   ]
   },
   {
    "cell_type": "code",
@@ -35,7 +37,7 @@
     "r = []  # list of cp.Expression objects: loss functions\n",
     "\n",
     "ztil = cp.Parameter((m, K), nonneg=True)\n",
-    "Pobj = cp.sum(cp.diag(ztil @ cp.vstack(r)))\n",
+    "Pobj = cp.sum(cp.multiply(ztil, cp.vstack(r).T))\n",
     "Preg = 0  # cp.Expression: regularization on model parameters\n",
     "Pconstr = []  # list of cp.Constraint objects: model parameter constraints\n",
     "Pprob = cp.Problem(cp.Minimize(Pobj + Preg), Pconstr)\n",
@@ -44,7 +46,7 @@
     "### F-problem\n",
     "rtil = cp.Parameter((K, m))\n",
     "z = cp.Variable((m, K))\n",
-    "Fobj = cp.sum(cp.diag(z @ rtil))\n",
+    "Fobj = cp.sum(cp.multiply(z, rtil.T))\n",
     "Freg = 0  # cp.Expression: regularization on latent factors\n",
     "Fconstr = [z >= 0, z <= 1, cp.sum(z, axis=1) == 1]\n",
     "Fprob = cp.Problem(cp.Minimize(Fobj + Freg), Fconstr)\n",
