remove saving figures

--- a/examples/constr_kmeans.ipynb
+++ b/examples/constr_kmeans.ipynb
@@ -208,9 +208,7 @@
     "    mlines.Line2D([], [], color='k', linewidth=2, linestyle='dashed', alpha=0.5, label='feasible set boundary'),\n",
     "]\n",
     "fig.legend(handles=handles, frameon=False, fontsize=13, bbox_to_anchor=(1, 0.95))\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "fig.savefig('../figures/constr_kmeans.pdf', bbox_inches='tight')"
+    "plt.tight_layout()"
    ]
   }
  ],
