--- a/examples/hier_forget_q_learning.ipynb
+++ b/examples/hier_forget_q_learning.ipynb
@@ -263,9 +263,7 @@
     "axs[0, 0].set_ylabel(r'$\\lambda = 0$')\n",
     "axs[1, 0].set_ylabel(r'$\\lambda = 1$')\n",
     "\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "fig.savefig('../figures/hier_forget_q_learning.pdf', bbox_inches='tight')"
+    "plt.tight_layout()"
    ]
   },
   {
