--- a/examples/io_hmm.ipynb
+++ b/examples/io_hmm.ipynb
@@ -208,8 +208,7 @@
     "axs[1].set_xlabel(r'$\\bar{x}$')\n",
     "axs[1].set_ylabel(r'$1/(1 + \\exp(-x^T \\theta))$', fontsize=15)\n",
     "\n",
-    "plt.tight_layout()\n",
-    "fig.savefig('../figures/io_hmm.pdf', bbox_inches='tight')"
+    "plt.tight_layout()"
    ]
   },
   {
