--- a/examples/mix_lin_reg.ipynb
+++ b/examples/mix_lin_reg.ipynb
@@ -183,9 +183,7 @@
     "axs.set_xticklabels(np.arange(1, 11, 2))\n",
     "axs.set_xlabel('indices')\n",
     "axs.set_ylabel(r'$\\theta$')\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "fig.savefig('../figures/mix_lin_reg.pdf', bbox_inches='tight')"
+    "plt.tight_layout()"
    ]
   },
   {
